crud customer and fix bugs
